--- a/aliados.html
+++ b/aliados.html
@@ -41,6 +41,16 @@
     <img src="img/aliados-banner.jpg" alt="">
   </div>
 
+<div class="contenedor-global-aliados">
+
+  <img class="dec-circulos" src="img/circulos-dec.png" alt="">
+  <img class="dec-circulos-izq" src="img/circulos-dec.png" alt="">
+  <img class="dec-pintura" src="img/pintura-dec.png" alt="">
+  <img class="dec-pintura2" src="img/pintura-dec.png" alt="">
+  <img class="dec-circulos2" src="img/circulos-dec.png" alt="">
+  <img class="dec-pintura-izq" src="img/pintura2-dec.png" alt="">
+  <img class="dec-circulos-izq2" src="img/circulos-dec.png" alt="">
+
   <div class="container">
     <br><br>
     <div class="title">
@@ -375,6 +385,8 @@
       </div>
     </div>
   </div>
+
+</div>
 
   <footer>
     <div class=" container">
