--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     </div>
   </div><!-- Slider -->
 
+<div class="contanedor-compromiso">
+  <img class="dec-pintura" src="img/pintura4-dec.png" alt="">
+  <img class="dec-pintura-izq" src="img/pintura2-dec.png" alt="">
+
   <div class="container compromiso">
     <h2 class="title">
       NUESTRO COMPROMISO
@@ -62,6 +66,9 @@
       Diariamente vivimos el valor de <span style="color: #f98627;">Devolver a la Comunidad</span>, que es nuestro motor para trabajar en equipo con distintas organizaciones a través de nuestros programas.
     </p>
   </div>
+
+</div>
+
 
   <div class="form-cont">
     <div class="container">
