--- a/resultados.html
+++ b/resultados.html
@@ -90,36 +90,19 @@
     </div>
   </div>
 </div>
-
-<!-- Titulo -->
-<div class="container">
-  <p class="title">
-    <strong>NUESTRO APOYO</strong> EN LOS ÚLTIMOS AÑOS
-  </p>
-</div>
-
-<div class="container">
-
-  <!-- 2022 -->
-  <div class="facts-shapes owl-carousel owl-theme  slider-2022">
-    <div data-merge="2" class="item year">
-      <img src="img/gray-shape.svg" alt="">
-      <div class="text">
-        2022
-      </div>
-
 <div class="cont-general-ultimos">
 
   <img class="dec-circulos" src="img/circulos-dec.png" alt="">
   <img class="dec-circulos-izq" src="img/circulos-dec.png" alt="">
   <img class="dec-pintura-izq" src="img/pintura3-dec.png" alt="">
-
   <!-- Titulo -->
   <div class="container">
     <p class="title">
       <strong>NUESTRO APOYO</strong> EN LOS ÚLTIMOS AÑOS
     </p>
   </div>
+
+
 
   <div class="container">
 
@@ -132,135 +115,146 @@
         </div>
 
       </div>
-      <div class="icon">
-        <img src="img/icon-pintura.png" alt="">
+      <div data-merge="1" class="item">
+        <img src="img/third-shape.svg" alt="">
+        <div class="text">
+          <p>
+            <span>+$52 MDP</span>
+            donados en pintura<br>
+            y mercancía
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-pintura.png" alt="">
+        </div>
+      </div>
+      <div data-merge="1" class="item">
+        <img src="img/second-shape.svg" alt="">
+        <div class="text">
+          <p>
+            <span>+$31 MDP</span>
+            recaudados<br>
+            en Colecta
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-fondos.png" alt="">
+        </div>
+      </div>
+      <div data-merge="1" class="item last">
+        <img src="img/last-shape.svg" alt="">
+        <div class="text">
+          <p>
+            <span>406</span>
+            Equipos Depot<br>
+            realizados
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-equipo.png" alt="">
+        </div>
       </div>
     </div>
-    <div data-merge="1" class="item">
-      <img src="img/second-shape.svg" alt="">
-      <div class="text">
-        <p>
-          <span>+$31 MDP</span>
-          recaudados<br>
-          en Colecta
-        </p>
+    <hr class="orange">
+
+    <!-- 2021 -->
+    <div class="facts-shapes alt owl-carousel owl-theme  slider-2021">
+      <div class="item last" data-merge="1">
+        <img src="img/last-alt.svg" alt="">
+        <div class="text">
+          <p>
+            <span>+$57 MDP</span>
+            donados en pintura<br>
+            y mercancía
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-pintura.png" alt="">
+        </div>
       </div>
-      <div class="icon">
-        <img src="img/icon-fondos.png" alt="">
+      <div class="item" data-merge="1">
+        <img src="img/shape-alt.svg" alt="">
+        <div class=" text">
+          <p>
+            <span>+$26 MDP</span>
+            recaudados<br>
+            en Colecta
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-fondos.png" alt="">
+        </div>
       </div>
+      <div class="item year" data-merge="2">
+        <img src=" img/gray-shape-alt.svg" alt="">
+        <div class="text">
+          2021
+        </div>
+
+      </div>
+
     </div>
-    <div data-merge="1" class="item last">
-      <img src="img/last-shape.svg" alt="">
-      <div class="text">
-        <p>
-          <span>406</span>
-          Equipos Depot<br>
-          realizados
-        </p>
+
+    <hr class="orange">
+
+    <!-- 2020 -->
+    <div class="facts-shapes owl-carousel owl-theme  slider-2020">
+      <div class="item year" data-merge="2">
+        <img src="img/gray-shape.svg" alt="">
+        <div class="text">
+          2020
+        </div>
       </div>
-      <div class="icon">
-        <img src="img/icon-equipo.png" alt="">
+      <div class="item" data-merge="1">
+        <img src="img/third-shape.svg" alt="">
+        <div class="text">
+          <p>
+            <span>+$48 MDP</span>
+            donados en pintura<br>
+            y mercancía
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-pintura.png" alt="">
+        </div>
+      </div>
+      <div class="item last" data-merge="1">
+        <img src="img/last-shape.svg" alt="">
+        <div class="text">
+          <p>
+            <span>+10.5 MDP</span>
+            Recaudados<br>
+            en colecta
+          </p>
+        </div>
+        <div class="icon">
+          <img src="img/icon-fondos.png" alt="">
+        </div>
       </div>
     </div>
   </div>
-  <hr class="orange">
 
-  <!-- 2021 -->
-  <div class="facts-shapes alt owl-carousel owl-theme  slider-2021">
-    <div class="item last" data-merge="1">
-      <img src="img/last-alt.svg" alt="">
-      <div class="text">
-        <p>
-          <span>+$57 MDP</span>
-          donados en pintura<br>
-          y mercancía
-        </p>
-      </div>
-      <div class="icon">
-        <img src="img/icon-pintura.png" alt="">
-      </div>
-    </div>
-    <div class="item" data-merge="1">
-      <img src="img/shape-alt.svg" alt="">
-      <div class=" text">
-        <p>
-          <span>+$26 MDP</span>
-          recaudados<br>
-          en Colecta
-        </p>
-      </div>
-      <div class="icon">
-        <img src="img/icon-fondos.png" alt="">
-      </div>
-    </div>
-    <div class="item year" data-merge="2">
-      <img src=" img/gray-shape-alt.svg" alt="">
-      <div class="text">
-        2021
-      </div>
-
-    </div>
-
-  </div>
-
-  <hr class="orange">
-
-  <!-- 2020 -->
-  <div class="facts-shapes owl-carousel owl-theme  slider-2020">
-    <div class="item year" data-merge="2">
-      <img src="img/gray-shape.svg" alt="">
-      <div class="text">
-        2020
-      </div>
-    </div>
-    <div class="item" data-merge="1">
-      <img src="img/third-shape.svg" alt="">
-      <div class="text">
-        <p>
-          <span>+$48 MDP</span>
-          donados en pintura<br>
-          y mercancía
-        </p>
-      </div>
-      <div class="icon">
-        <img src="img/icon-pintura.png" alt="">
-      </div>
-    </div>
-    <div class="item last" data-merge="1">
-      <img src="img/last-shape.svg" alt="">
-      <div class="text">
-        <p>
-          <span>+10.5 MDP</span>
-          Recaudados<br>
-          en colecta
-        </p>
-      </div>
-      <div class="icon">
-        <img src="img/icon-fondos.png" alt="">
-      </div>
-    </div>
-  </div>
 </div>
 
-</div>
 
-  <footer>
-    <img class="dec-pintura" src="img/pintura-dec.png" alt="">
-    <div class=" container">
-      <hr>
-      <div class="grid">
-        <div class="column">
-          <a href="">Inicio</a>
-          <a href="">Fundacion</a>
-        </div>
-        <div class="column">
-          <a href="">Responsabilidad Social</a>
-          <a href="">Aliados</a>
-        </div>
-        <div class="column">
-          <a href="">Resultados</a>
-          <a href="">Informe Anual</a>
-        </div>
+
+
+
+<footer>
+  <div class="container">
+    <hr>
+    <div class="grid">
+      <div class="column">
+        <a href="index.html">Inicio</a>
+        <a href="fundacion.html">Fundacion</a>
+      </div>
+      <div class="column">
+        <a href="responsabilidadsocial.html">Responsabilidad Social</a>
+        <a href="aliados.html">Aliados</a>
+      </div>
+      <div class="column">
+        <a href="resultados.html">Resultados</a>
+        <a href="informeanual.html">Informe Anual</a>
       </div>
     </div>
   </div>
