cambio de responsabilidas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="menu">
         <li class="current"><a href="index.html">Inicio</a></li>
         <li><a href="fundacion.html">Fundación</a></li>
-        <li><a href="responsabilidadsocial.html">Responsabilidas social</a></li>
+        <li><a href="responsabilidadsocial.html">Responsabilidad social</a></li>
         <li><a href="aliados.html">Aliados</a></li>
         <li><a href="resultados.html">Resultados</a></li>
         <li><a href="informeanual.html">Informe anual</a></li>
@@ -49,25 +49,25 @@
     </div>
   </div><!-- Slider -->
 
-<div class="contanedor-compromiso">
-  <img class="dec-pintura" src="img/pintura4-dec.png" alt="">
-  <img class="dec-pintura-izq" src="img/pintura2-dec.png" alt="">
+  <div class="contanedor-compromiso">
+    <img class="dec-pintura" src="img/pintura4-dec.png" alt="">
+    <img class="dec-pintura-izq" src="img/pintura2-dec.png" alt="">
 
-  <div class="container compromiso">
-    <h2 class="title">
-      NUESTRO COMPROMISO
-    </h2>
-    <p>
-      Desde nuestra llegada a México en 2001, nuestro principal objetivo ha sido mantener un firme compromiso de contribuir al desarrollo de las comunidades
-      en donde tenemos presencia.
-    </p>
-    <br>
-    <p>
-      Diariamente vivimos el valor de <span style="color: #f98627;">Devolver a la Comunidad</span>, que es nuestro motor para trabajar en equipo con distintas organizaciones a través de nuestros programas.
-    </p>
+    <div class="container compromiso">
+      <h2 class="title">
+        NUESTRO COMPROMISO
+      </h2>
+      <p>
+        Desde nuestra llegada a México en 2001, nuestro principal objetivo ha sido mantener un firme compromiso de contribuir al desarrollo de las comunidades
+        en donde tenemos presencia.
+      </p>
+      <br>
+      <p>
+        Diariamente vivimos el valor de <span style="color: #f98627;">Devolver a la Comunidad</span>, que es nuestro motor para trabajar en equipo con distintas organizaciones a través de nuestros programas.
+      </p>
+    </div>
+
   </div>
-
-</div>
 
 
   <div class="form-cont">
