--- a/informeanual.html
+++ b/informeanual.html
@@ -24,7 +24,7 @@
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="fundacion.html">Fundación</a></li>
-                <li><a href="responsabilidadsocial.html">Responsabilidas social</a></li>
+                <li><a href="responsabilidadsocial.html">Responsabilidad social</a></li>
                 <li><a href="aliados.html">Aliados</a></li>
                 <li><a href="resultados.html">Resultados</a></li>
                 <li class="current"><a href="informeanual.html">Informe anual</a></li>
