ligas de guias de deducibles

--- a/fundacion.html
+++ b/fundacion.html
@@ -139,7 +139,7 @@
             <div class="contenedor-importante">
                 <p>Importante considerar: </p>
                 <ul>
-                    <li>Se deberá entregar un recibo deducible desglosado <a href="#">(consulta aquí guía de elaboración de recibos)</a></li>
+                    <li>Se deberá entregar un recibo deducible desglosado <a href="files/Guia recibos deducibles.jpg" download>(consulta aquí guía de elaboración de recibos)</a></li>
                     <li>La donataria recibirá el donativo en forma de “lote” y tomará los artículos con los que cuente la tienda</li>
                     <li>Las recolecciones del donativo se coordinarán con la sucursal, la institución beneficiada acude a recolectar la donación</li>
                     <li>Se tomarán una serie de fotografías y se realizará la firma de una carta responsiva</li>
@@ -185,7 +185,7 @@
             <div class="contenedor-importante">
                 <p>Importante considerar: </p>
                 <ul>
-                    <li>Se deberá entregar un recibo deducible desglosado <a href="#">(consulta aquí guía de elaboración de recibos)</a></li>
+                    <li>Se deberá entregar un recibo deducible desglosado <a href="files/Guia recibos deducibles.jpg" download>(consulta aquí guía de elaboración de recibos)</a></li>
                     <li>La donataria recibirá el donativo en forma de “lote” y tomará los artículos con los que cuente la tienda</li>
                     <li>Las recolecciones del donativo se coordinarán con la sucursal, la institución beneficiada acude a recolectar la donación</li>
                     <li>Se tomarán una serie de fotografías y se realizará la firma de una carta responsiva</li>
