--- a/informeanual.html
+++ b/informeanual.html
@@ -43,21 +43,21 @@
                 <h2>DA CLIC PARA CONOCER NUESTROS INFORMES</h2>
             </div>
             <div class="contenedor-informes">
-                <a class="cont-informe" href="files/JuntosLogramosMas_IA_THD_2022_comprimido.pdf" download>
+                <a class="cont-informe" href="files/JuntosLogramosMas_IA_THD_2022_comprimido.pdf" style="background-image: url(img/informe2022.jpg);" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2022</span></h2>
                         <p>clic para descargar</p>
                     </div>
                 </a>
-                <a class="cont-informe" href="files/Informe 2021.pdf" download>
+                <a class="cont-informe" href="files/Informe 2021.pdf" style="background-image: url(img/informe2021.jpg);" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2021</span></h2>
                         <p>clic para descargar</p>
                     </div>
                 </a>
-                <a class="cont-informe" href="files/Informe 2020.pdf" download>
+                <a class="cont-informe" href="files/Informe 2020.pdf" style="background-image: url(img/informe2020.jpg);" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2020</span></h2>
