--- a/fundacion.html
+++ b/fundacion.html
@@ -249,7 +249,9 @@
 
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/thd.js"></script>
+
 <script>
     $(document).ready(function () {
         $('.contenedor-general-programas .contenedor-programas .programa').click(function () {
