--- a/informeanual.html
+++ b/informeanual.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundación - Informe Anual</title>
+    <title>Informe Anual - Devolver a la comunidad</title>
     <link rel="stylesheet" href="css/informeanual.css">
 </head>
 
@@ -87,6 +87,9 @@
             </div>
         </div>
     </footer>
+    
+    <script src="js/jquery.js"></script>
+    <script src="js/thd.js"></script>
 
 </body>
 </html>
