--- a/responsabilidadsocial.html
+++ b/responsabilidadsocial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundación - Responsabilidad Social</title>
+    <title>Responsabilidad Social - Devolver a la comunidad</title>
     <link rel="stylesheet" href="css/responsabilidadsocial.css">
 </head>
 
@@ -150,7 +150,8 @@
     </footer>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/thd.js"></script>
 <script>
     $(document).ready(function () {
         $('.contenedor-general-programas .contenedor-programas .programa').click(function () {
