cambio de acento

--- a/fundacion.html
+++ b/fundacion.html
@@ -122,8 +122,7 @@
                     <li>Sube tu documentación</li>
                 </ul>
                 <p>
-                    Una vez registrada tu información, la solicitud pasará a un proceso de evaluación. <br>
-                    En caso de que su proyecto sea autorizado, estaremos contactándonos con ustedes.
+                    Una vez registrada tu información, la solicitud pasará a un proceso de evaluación. En caso de que su proyecto sea autorizado, estaremos contactándonos con ustedes.
                 </p>
                 <div class="galeria">
                     <img src="img/donaciondemercancia-1.jpg" alt="">
@@ -233,7 +232,7 @@
             <div class="grid">
                 <div class="column">
                     <a href="index.html">Inicio</a>
-                    <a href="fundacion.html">Fundacion</a>
+                    <a href="fundacion.html">Fundación</a>
                 </div>
                 <div class="column">
                     <a href="responsabilidadsocial.html">Responsabilidad Social</a>
