--- a/informeanual.html
+++ b/informeanual.html
@@ -74,7 +74,7 @@
             <div class="grid">
                 <div class="column">
                     <a href="index.html">Inicio</a>
-                    <a href="fundacion.html">Fundacion</a>
+                    <a href="fundacion.html">Fundación</a>
                 </div>
                 <div class="column">
                     <a href="responsabilidadsocial.html">Responsabilidad Social</a>
@@ -87,7 +87,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="js/jquery.js"></script>
     <script src="js/thd.js"></script>
 
