--- a/aliados.html
+++ b/aliados.html
@@ -394,7 +394,7 @@
       <div class="grid">
         <div class="column">
           <a href="index.html">Inicio</a>
-          <a href="fundacion.html">Fundacion</a>
+          <a href="fundacion.html">Fundación</a>
         </div>
         <div class="column">
           <a href="responsabilidadsocial.html">Responsabilidad Social</a>
